fix: layout issue

--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
   background-color: #282c33;
   border-radius: 0.25rem;
+  height: 100%;
 }
 
 @media (max-width: 768px) {
   .main {
     border-radius: 0;
+    min-height: 100vh;
   }
 }
